# PECI-05-2022-23

./: .gitignore  README.md  Vagrantfile  bmv2.Dockerfile  bootstrap.sh  clean.sh  docker-compose.yaml  docker-compose.yml  getIp.sh  index.html  launcher.py  package-lock.json  package.json  run.sh  tsconfig.json  tsoa.json  vite.config.js  vue.config.js
backend/Auth/: .dockerignore  .env  Cargo.toml
backend/Auth/src/: controllers.rs
src/: .gitignore  App.js  App.vue  main.js  pyproject.toml  requirements.txt  server.ts  style.css  theme.js
src/P4Controller/: controller.py  dump1.txt  dump2.txt  dump3.txt
src/assets/: main.css
src/components/: CommandBox.jsx  Dropzone.css  Dropzone.jsx  Navbar.vue  Popup.css  Popup.jsx  Welcome.vue  desktop-navigation.vue  testimonal.vue
src/config/: config.ts
src/data/: Switch.js  dados.json  hosts.js  links.js  switches.js
src/docs/: Mininet_REST.html  P4Runtime_REST.html  server.html
src/mininte-api/: Test_Mininet.postman_collection.json
src/network/: .Makefile.swp  Makefile  build_environment.py  mininet_topo.py  netstat.py  p4_host.py  p4runtime_switch.py
src/p4controller/: API_testing.postman_collection.json  Mininet_REST.py  P4Runtime_REST.py  Test_P4Runtime.postman_collection.json  controller.py  server.py
src/p4controller/api/: Server_P4Runtime_API.postman_collection.json  server.py  topology.json
src/p4controller/p4controller/: P4Runtime_REST.py
src/p4controller/server/: Server_P4Runtime_API_Testing.postman_collection.json  server.py
src/p4runtime-api/: P4Runtime_REST.py  Test_P4Runtime.thunderclient_collection.json  pyproject.toml
src/p4runtime_lib/: helper.py  switch.py
src/p4runtime_lib/p4runtime_lib/: switch.py
src/scenes/faq/: index.jsx
src/service/: topology.js
src/testFiles/: advanced_tunnel.p4i
src/views/: home.vue
(+331 files in other folders)
