[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["David Araujo <davidaraujo@ua.pt>"]
license = "Apache License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
flask = "^2.3.2"
googleapis-common-protos = "^1.59.0"
grpcio = "^1.54.2"
grpcio-tools = "^1.54.2"
importlib-metadata = "^6.6.0"
itsdangerous = "^2.1.2"
jinja2 = "^3.1.2"
markupsafe = "^2.1.2"
mininet = "^2.3.0.dev6"
p4runtime = "^1.3.0"
protobuf = "^4.23.1"
psutil = "^5.9.5"
werkzeug = "^2.3.4"
zipp = "^3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
