[package]
name = "auth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features= ["json"]}
diesel = { version = "2.0.1", features = ["postgres", "chrono"] }
dotenv = "0.15.0"
chrono = "^0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
jwt-simple = "0.10"