[tool.poetry]
name = "p4runtime-api"
version = "0.1.0"
description = ""
authors = ["David Araujo <davidaraujo@ua.pt>"]
license = "Apache"
readme = "README.md"
packages = [{include = "p4runtime_api"}]

[tool.poetry.dependencies]
python = "^3.9"
blinker = "1.6.2"
click = "8.1.3"
flask = "2.3.2"
googleapis-common-protos = "1.59.0"
grpcio = "1.51.1"
importlib-metadata = "6.6.0"
itsdangerous = "2.1.2"
jinja2 = "3.1.2"
markupsafe = "2.1.2"
p4runtime = "1.3.0"
protobuf = "3.20.3"
werkzeug = "2.3.4"
zipp = "3.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
